# seneyed

./: Makefile.am  README.md  configure.ac
include/: seneye_daemon.h  seneye_hotplug.h
src/: Makefile.am  main.c  seneye_daemon.c  seneye_hotplug.c
